<resources>
    <string name="app_name">CalculGraph</string>
    <string name="back">back</string>
    <string name="game_mode">Choose game mode</string>
    <string name="standard">standard</string>
    <string name="max">max</string>
    <string name="set">set</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="calculGraph">CalculGraph</string>
    <string name="new_game">NEW GAME</string>
    <string name="levels">LEVELS</string>
    <string name="statistic">STATISTIC</string>
    <string name="settings">SETTINGS</string>
    <string name="continue_">CONTINUE</string>
    <string name="exit">EXIT</string>
    <string name="menu">menu</string>
    <string name="placeholder">.</string>
    <string name="sound">Sound</string>
    <string name="language">Language:</string>
    <string name="theme">Theme:</string>
    <string name="computability">Computability:</string>
    <string name="time">Time:</string>
    <string name="games">Games:</string>
    <string name="average_score">Average score:</string>
    <string name="max_score">Max score:</string>
    <string name="moves">Moves:</string>
    <string name="info">info</string>
    <string name="statistics">Statistics for settings</string>
    <string name="ok">OK</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="updateMoves">moves: %1$d</string>
    <string name="wait">The creator doesn\'t know how to write optimal code, so wait …</string>
    <string name="seconds">s</string>
    <string name="minutes">m</string>
    <string name="hours">h</string>
    <string name="score">score: %1$d</string>
    <string name="need">need: %1$s</string>
    <string name="after_game">"You have scored %1$d points. Do you want to play again?"</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="insane">INSANE</string>
    <string name="level">level: %1$d</string>
    <string name="after_level">Next level?</string>
    <string name="theme_standard">Standard</string>
    <string name="theme_other">Other</string>
</resources>
