<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/levelsAll"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="vertical">

        <Button
            android:id="@+id/menu"
            android:text="@string/menu"
            style="@style/ButtonStandard"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/modeLevels"
                style="@style/Spinner"
                android:text="@string/placeholder" />

        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#798DFF"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewGame"
                    android:layout_gravity="center"
                    android:text="@string/easy" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/colorPrimary"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/levelsEasy">

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#526BFF"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewGame"
                    android:layout_gravity="center"
                    android:text="@string/medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/colorPrimary"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/levelsMedium">

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#304FFF"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewGame"
                    android:layout_gravity="center"
                    android:text="@string/hard" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/colorPrimary"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/levelsHard">

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0027FF"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewGame"
                    android:layout_gravity="center"
                    android:text="@string/insane" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/colorPrimary"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/levelsInsane">

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>