<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="horizontal">
        <Button
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/menu" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/back" />

        <TextView
            android:id="@+id/kolMoves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:text="@string/placeholder" />

        <TextView
            android:id="@+id/totalNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="30sp"
            android:text="@string/placeholder" />

    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/draw"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_weight="0.375"
            android:layout_height="match_parent"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/background"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_weight="0.425"
                android:layout_height="0dp"/>

            <TextView
                android:id="@+id/currentNumber"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.15"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/placeholder"/>

            <Space
                android:layout_width="match_parent"
                android:layout_weight="0.425"
                android:layout_height="0dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Space
            android:layout_width="0dp"
            android:layout_weight="0.375"
            android:layout_height="match_parent"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>